2007-10-23  Philip Withnall  <pwithnall@svn.gnome.org>

	* configure.in: Decrease Python dependency back to 2.3,
	and bump up PyGTK dependency to 2.12 (it should've been
	bumped when the YouTube plugin was committed) (Closes: #489306)

2007-10-22  Philip Withnall  <pwithnall@svn.gnome.org>

	Update svn:ignore properties.

2007-10-22  Philip Withnall  <pwithnall@svn.gnome.org>

	* bindings/python/Makefile.am:
	* bindings/python/totem.defs:
	* bindings/python/totem.override:
	* src/Makefile.am:
	* src/plugins/youtube/youtube.py:
	* src/plugins/youtube/youtube.ui:
	* src/totem-cell-renderer-video.c: (totem_cell_renderer_video_new),
	(totem_cell_renderer_video_class_init),
	(totem_cell_renderer_video_init),
	(totem_cell_renderer_video_dispose),
	(totem_cell_renderer_video_set_property),
	(totem_cell_renderer_video_get_property), (get_size),
	(totem_cell_renderer_video_get_size),
	(totem_cell_renderer_video_render):
	* src/totem-cell-renderer-video.h: Move the cell renderer used in
	the YouTube plugin out to a C-based GObject and clean it up a bit.
	Add the new object to the Python bindings, and make the YouTube
	plugin use it. Additional cleanup to the YouTube plugin and the
	Python bindings.

2007-10-22  Philip Withnall  <pwithnall@svn.gnome.org>

	* src/plugins/youtube/youtube.py: Fix popping from an empty list
	in some cases (Closes: #486504)

============ Version 2.21.0

2007-10-21  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* data/Makefile.am:
	* src/plugins/mythtv/Makefile.am: Fix distcheck errors

2007-10-21  Jan Arne Petersen  <jpetersen@jpetersen.org>

	* src/plugins/youtube/youtube.py: Use a regular expression to extract
	the token (allows the extraction also if the token is not the last
	argument) and close the HTTP connection (Closes #488763)

2007-10-19  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c:
	(totem_embedded_toggle_fullscreen):
	Put the fullscreen window on the screen where the video