@@ -13,6 +13,7 @@ totem_pl_parser_can_parse_from_data
 totem_pl_parser_can_parse_from_filename
 totem_pl_parser_type_get_type
 totem_pl_parser_parse_duration
+totem_pl_parser_parse_date
 totem_cd_detect_type
 totem_cd_detect_type_with_url
 totem_cd_detect_type_from_dir
